2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* mdhost.csproj: Build mdhost and mdrun as 32-bit too on
	  Windows.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* mdhost.csproj: Flush MD's removal of newline at end of file
	  that was introduced by manually editing with gedit.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* mdhost.csproj: Output to the correct directory.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* mdhost.mdp:
	* mdhost.csproj: Migrated to MSBuild file format.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* mdhost.mdp: Flush project format changes.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* mdhost.mdp: Fix target framework.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* mdhost.mdp: Don't require a specific version of Mono.Addins.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* mdhost.mdp: Updated projects.

2008-02-15  Geoff Norton  <gnorton@novell.com>

	* src/mdhost.cs: Disable .NET remoting security on Tcp channels.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* src/mdhost.cs: Fix warnings.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* mdhost.mdp: Add missing reference.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, mdhost.mdp: Directory reorganization.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* mdhost.mdp: Project file names updated by change in MD path functions.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.
	* Mono.Addins/ExtensionContext.cs: Fixed GetExtensionObjects overload
	  which was not using the correct reuseCachedInstance value.
	* Mono.Addins/ExtensionTree.cs: Improved error message. When looking
	  for a type in an assembly, avoid throwing an exception too early,
	  since it may be found in other assemblies.
	* Mono.Addins.Database/AddinDatabase.cs: In the addin info cache, also
	  store information about unsuccessful lookups, to avoid looking for